[package]
name = "CEH-mocktest"
version = "0.5.0"
edition = "2021"

[features]
use_local = []
do_quiz = []
use_sqlite = []
use_clipboard = []
use_db = ["rusqlite"]
use_ki = ["ollama-rs", "tokio"]
use_py = []
default = ["use_local"]


[dependencies]
rand = "0.9.0-alpha.2"
anyhow = "1.0.93"
base64 = "0.22.1"
serde_json = "1.0.132"
colored = "2.1.0"
url = "2.5.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.41", features = ["rt", "rt-multi-thread", "macros"], optional = true }
clipboard = "0.5"
ollama-rs = { version= "0.2.1", optional = true }
rusqlite = { version = "0.32.1", features = ["bundled"], optional = true }
clap = "4.5.21"
